# gridfill

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  PLAN.md  README.md  editor.md  foo.cwd  pyproject.toml
.claude/commands/: build-binary.md  make-release.md
.claude/skills/debug-detection/: SKILL.md
.github/workflows/: build.yml
deploy/: .gitignore  Makefile  README.md
deploy/backend/: ansible.cfg  gridfill.service  playbook_backend.yaml
deploy/frontend/: playbook_frontend.yaml
deploy/nginx/: gridfill_ratelimit.conf  playbook_nginx.yaml
deploy/nginx/templates/: gridfill.flannaghan.com.conf.j2
models/: .gitkeep
packaging/: crossword-transcriber.spec  gridfill.spec  gui_main.py  inkwell.spec
python/: CLAUDE.md  README.md  pyproject.toml
python/packaging/: gridfill.spec
python/src/gridfill/: __init__.py  cli.py  document.py  geometry.py  io.py  server.py  types.py
python/src/gridfill/detection/: __init__.py  combined.py  irregular.py  ordering.py  rectangle.py
python/tests/: synthetic.py  test_document.py  test_geometry.py  test_irregular.py  test_server.py  test_types.py
scripts/: train_emnist.py
src/crossword_transcriber/: __init__.py  classify.py  cli.py  debug.py  detection.py  document.py  editor.py  errors.py  fonts.py  geometry.py  io.py  preprocess.py  reader.py  segmentation.py  types.py  writer.py
src/crossword_transcriber/recognize/: __init__.py  cnn.py
src/gridfill/: __init__.py  cli.py  document.py  editor.py  errors.py  fonts.py  geometry.py  renderer.py  types.py
src/gridfill/detection/: __init__.py  combined.py  irregular.py  rectangle.py
src/inkwell/: __init__.py  cli.py  document.py  editor.py  fonts.py  types.py
tests/: test_classify.py  test_document.py  test_editor.py  test_fixtures.py  test_geometry.py  test_io.py  test_irregular.py  test_multigrid.py  test_read.py  test_recognize.py  test_renderer.py  test_types.py  test_write.py
web/: CLAUDE.md  README.md  editor.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  index.css  main.tsx
web/src/annotations/: curve.ts  kind.ts  line.ts  registry.ts  sizes.ts  spline.ts  stroke.ts  text.ts  types.ts
web/src/annotations/__tests__/: kinds.test.ts  spline.test.ts
web/src/canvas/: CanvasEditor.tsx  hitTest.ts  render.ts  viewport.ts
web/src/canvas/__tests__/: hitTest.test.ts  viewport.test.ts
web/src/lib/: autosave.ts  backend.ts  files.ts  useOpenFile.ts
web/src/lib/__tests__/: autosave.test.ts  backend.test.ts
web/src/model/: color.ts  colour.ts  cwd.ts  geometry.ts  grid.ts
web/src/model/__tests__/: color.test.ts  colour.test.ts  cwd.test.ts  geometry.test.ts  grid.test.ts
web/src/state/: store.ts
web/src/state/__tests__/: store.test.ts
web/src/ui/: AnnotationEditor.tsx  ContextMenu.tsx  MenuBar.tsx  Toolbar.tsx  icons.tsx
web/src/ui/__tests__/: AnnotationEditor.test.tsx  MenuBar.test.tsx  Toolbar.test.tsx
