[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridfill"
version = "0.2.0"
description = "Detect crossword grids in images and fill them interactively."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tom Flannaghan", email = "tomflannaghan@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.2",
    "pypdfium2>=4.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
build = [
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2024.7",
]

[project.scripts]
gridfill = "gridfill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gridfill"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
